[package]
name = "republic-of-discord"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
serenity = { version = "0.10.9", default-features = false, features = ["unstable_discord_api", "rustls_backend", "builder", "cache", "client", "gateway", "model", "http", "utils"] }
clap = "2.33.3"
failure = "0.1.8"
chrono = "0.4.19"
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
mongodb = "2.0.0-beta.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.66"
